delete application_home layout and navhome partial | remove line of pages controller index that used to render application_home layout | fix clip-path firefox error on answers/show | minor h3 style fix to center align it

--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -77,7 +77,7 @@ section.new-answer {
     h3{
       color: #00C166;
       font-family: 'Roboto Slab', serif;
-      font-size: 20px;
+      // font-size: 20px;
       font-weight: 100;
       margin-left: 75px;
       strong{ color: #383838}
