--- a/app/assets/stylesheets/user-profile.scss
+++ b/app/assets/stylesheets/user-profile.scss
@@ -197,7 +197,7 @@ body{ background: #EEEEED;}
     }
 
     h3{
-      line-height: 80px;
+      line-height: 74px;
       color: $color-green;
       margin: 0 0 0 80px;
       display: inline-block;
